Fixed dark mode bugs

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -91,6 +91,10 @@ div {
   }
 }
 
+[theme="dark"] .flex_container {
+  background-color: #292a2d;
+}
+
 .flex_container {
   padding: 10% 0%;
 }
@@ -667,8 +671,11 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
   margin: auto;
   padding-bottom: 10px;
   font-size: smaller;
-  a {
+  [theme="light"] a {
     color: black;
+  }
+  [theme="dark"] a {
+    color: white;
   }
   a:hover {
     color: #2d96bd;
@@ -683,6 +690,10 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
   bottom: 0;
   left: 0;
   font-size: smaller;
+}
+
+[theme="dark"] .footer .content a:hover {
+  border-bottom: 1px solid white;
 }
 
 .footer .heading {
@@ -707,8 +718,13 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 
 .footer .content a {
   text-decoration: none;
-  color: black;
-}
+  [theme="dark"] {
+    color: white;
+  }
+  [theme="light"] {
+    color: black;
+  }
+  }
 
 .footer .content a:hover {
   border-bottom: 1px solid black;
